--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="lt">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Laboratorinis darbas">
-    <meta name="author" content="Nedas, Adulis, EF23/1">
+    <meta name="description" content="Papildoma užduotis: HTML dokumento šablonas">
+    <meta name="author" content="Nedas Adulis">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skriptinio programavimo laboratoriniai</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Čia bus pagrindinis turinys -->
