--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - PhotoFolio Bootstrap Template</title>
+  <title>Programavimo laboratoriniai</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -96,7 +96,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
             <h2><span>I'm </span><span class="underlight">Nedas Adulis</span> a Professional<span> Electrical Engineer</span></h2>
-            <p>Blanditiis praesentium aliquam illum tempore incidunt debitis dolorem magni est deserunt sed qui libero. Qui voluptas amet.</p>
+            <p>Čia yra mano programavimo laboratoriniai darbai!.</p>
             <a href="contact.html" class="btn-get-started">Available for Hire<br></a>
           </div>
         </div>
